# sudachi-swift

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  Package.swift  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/sudachi-swift-uniffi/: Cargo.toml  build.rs
crates/sudachi-swift-uniffi/src/: default_config.json  lib.rs  sudachi_swift.udl
crates/sudachi-swift-uniffi/tests/: tokenize.rs
crates/suji-sudachi-uniffi/: Cargo.toml  build.rs
crates/suji-sudachi-uniffi/src/: lib.rs  suji_sudachi.udl
docs/: ARCHITECTURE.md
scripts/: build-ios.sh  coverage.sh  fetch-dictionary.sh  lint-swift.sh
swift/Sudachi/: Package.swift
swift/Sudachi/Sources/Sudachi/: Sudachi+Extensions.swift  Sudachi.swift
swift/Sudachi/Tests/SudachiTests/: SudachiExtendedAPITests.swift  SudachiTests.swift  TestSupport.swift
swift/SujiSudachi/: Package.swift
swift/SujiSudachi/Sources/SujiSudachi/: SujiSudachi.swift
swift/SujiSudachi/Tests/SujiSudachiTests/: SujiSudachiExtendedAPITests.swift  SujiSudachiTests.swift
