[workspace]
resolver = "2"
members = ["crates/sudachi-swift-uniffi"]
exclude = ["third_party"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Swift bindings for the Sudachi Japanese morphological analyzer (sudachi.rs) via UniFFI"
authors = ["Ilia Snezhkov <iasnezhkov@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/iasnezhkov/sudachi-swift"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
